--- a/backend/package.json
+++ b/backend/package.json
@@ -27,8 +27,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "socket.io": "^4.8.1",
-    "uuid": "^13.0.0",
-    "xss-clean": "^0.1.4"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
