--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "migrate:cloudinary": "node scripts/migrate-uploads-to-cloudinary.js"
   },
   "engines": {
     "node": ">=18"
@@ -28,7 +29,8 @@
     "multer": "^2.0.2",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0",
-    "xss-clean": "^0.1.4"
+    "xss-clean": "^0.1.4",
+    "cloudinary": "^1.41.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
